--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "project-euler"
 version = "0.1.0"
 authors = ["Blake"]
+edition = "2018"
 
 [dependencies]
 itertools = "0.7.3"
+num-bigint = "0.4"
 quicli = "0.3"
