--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,10 @@
 name = "project-euler"
 version = "0.1.0"
 authors = ["Blake"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 itertools = "0.7.3"
 num-bigint = "0.4"
-quicli = "0.3"
+quicli = "0.4"
+structopt = "0.3"
